# workflow-engine

./: .cursorrules  .gitignore  .gitlab-ci.yml  .gitleaksignore  .mcp.json  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  ALEMBIC_HEADS_GUIDE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile-test  Dockerfile.multi  EXECUTION_TRACING_README.md  FIX_ALEMBIC_OVERLAP.md  FIX_ALEMBIC_VERSION.md  MIGRATION_INSTRUCTIONS_2FA.md  PRODUCTION_SESSION_MANAGEMENT.md  README.md  TESTING_MULTI_TENANT_API.md  TEST_DOCUMENTATION.md  alembic.ini  app.diff  app.py  app.py.bak  app.py.xero_processing_updates_in_progress  audit.py  cleanup_test_data.py  config_loader.py  csv_output.py  customer_sales_trends.py  data_fetch.py  data_fetch.py.bak  database_insert.py  debug_invoice.py  docker-compose.observability-grafana.yml  docker-compose.observability-posthog.yml  docker-compose.test.yml  extract_pdf.py  (+22 more)
.agents/: autonomy.md  ci-gate-setup.md  conventions.md  semgrep-remediation-plan.md  test-map.md  test-quarantine.md
.agents/history/: README.md  findings.jsonl
.agents/metrics/: README.md  outcomes.jsonl  runs.jsonl
.agents/perf/: budgets.json
.agents/plans/: repo-modernisation-plan.md
.agents/skills/: html.md  js.md  python.md
.agents/specs/: playwright-e2e.md  test-authoring-skills-plan.md
.claude/agents/: AGENTS.md  CLAUDE.md  README.md  liquor-licence-report.html
.claude/skills/: bize-product-manager  business-operator  calendar-planner  community-triage  competitor-watch  compliance-project-assistant  content-producer  crm-updater  cto-software-architect  customer-success-onboarding  discovery-synthesis  distillery-strategy-advisor  finance-advisor  marketing-director  (+6 more)
app/: app.py  initialize.py  main.py
ci/: cleanup_server.sh  setup_database.sh  setup_server.sh
config/: local.ini  local.ini.template  prod.ini  prod.ini.template  test.ini  test.ini.template
cursor_instructions/: 2fa-backup-codes.md  2fa-reliability-analysis.md  2fa-security-analysis.md  2fa-totp.md  CSP violations.md  accounting-integrations-and-crm.md  adding-custom-expiry.md  auth-account-polish.md  backend-dag-hardening.md  base-spa.md  batch-start-related-review.md  batch-start-scripts-review.md  batches-fixes.md  batches-refactor-checklist.md  batches-refactor.md  click.md  complete-step-transaction-refactor-plan.md  core-dashboard-real-data-plan.md  core-initial-fixes-pt2.md  core-initial-fixes.md  core-mental-models.md  core.md  corechecks.md  critical-session-hardening-cursor.md  critical-session-hardening.md  crm-overview-plan.md  custom-expiry-findings.md  event-sourcing-temporal-sourcemap.md  evidence-management-enhancements.md  execution-evidence.md  execution-modal-parity-checklist.md  execution-refactor-opportunities.md  execution_tracing_readme.md  fix-core-process-issues.md  flows-and-batches-review.md  flows2-batches-related-reviews.md  frontend-cleanup.md  harden-dagtraversal-testsuite.md  hardening-sessions-again.md  hardening-sessions.md  (+24 more)
docs/: aer-architecture-proposal.md  aer-architecture-review.md  deploy-registry-cd.md  execution_step_spa_parity_checklist.md  observability-branch-review-2026-07-10.md  observability-events-vs-logs.md  observability-local-dev.md  observability-rum-consent.md  observability-sampling-roadmap.md  supply-chain-security.md  xero-mcp-setup.md
email_templates/: restock_email.html  restock_email_notification.html  restock_email_notification.html.bak
gitlab-runner/: .runner_system_id
scripts/: ci_inventory_quantity_sql_scan.py  cleanup_api_idempotency_keys.sql  db_restore.sh  deploy_test_simple.sh  e2e_coverage.py  error_scan.py  finding_history.py  git_workflow.sh  inventory_quantity_drift_check.sql  loc_stats.py  local_secrets.py  perf_triage.py  preflight.py  ruff.sh  rule_candidates.py  run_all_api_tests.py  run_local.sh  run_prod.sh  run_test.sh  sanitize_db.py  setup_config.sh  skill_graph.py  skill_metrics.py  test_map_check.py
sql/: create_ro_user.sql
static/: add_flavor.css  styles.css  styles.css.current  styles_index.css  styles_raw_data.css  terminal.css
templates/: add_alcohol.html  add_botanicals_to_inventory.html  add_buyer.html  add_empty_bottles.html  add_ex_stock_storage.html  add_flavor.html  add_flavor.html.bak  add_flavor_to_vat.html  add_premix.html  add_product.html  add_sales_product_samples.html  add_supplier.html  alcohol_dilution_calc.html  alcohol_dilution_calc_from_volume.html  alcohol_final_abv.html  alcohol_mix_abv.html  alcohol_starting_abv.html  audit_data.html  audit_tools.html  bottle_sales.html  bottled_product.html  bottled_product.html.bak  buys_sells.html  calculations.html  create_sample.html  crm.html  customer_detail.html  customs_lodgements.html  data_tools.html  database_query_form.html  database_query_form.html.bak.tmp  database_query_result.html  database_query_result.html.bak  distillation_experiment.html  flavor_experiment.html  index.html  index.html.bak1  ingredient_tools.html  ingredient_tracer.html  ingredient_tracer_rusults.html  (+19 more)
tests/: TESTING_MULTI_TENANT_API.md  TEST_DOCUMENTATION.md  TEST_OPTIMIZATION_GUIDE.md  __init__.py  cleanup_test_data.py  conftest.py  dag_traversal_helpers.py  factories.py  test_2fa_totp_optimized.py  test_auth_password_session.py  test_batches_refactor_frontend_guards.py  test_complete_step_payload.py  test_corechecks.py  test_crm.py  test_dag_traversal.py  test_dashboard_summary.py  test_e2e_coverage.py  test_execution_modal_frontend_assets.py  test_execution_shared_utils_js.py  test_executions.py  test_finding_history.py  test_inventory_quantity_guard.py  test_login_2fa_flow.py  test_multi_tenant_api.py  test_multi_tenant_isolation.py  test_observability_cli.py  test_observability_config.py  test_observability_context.py  test_observability_logging_config.py  test_observability_logging_redaction.py  test_observability_resource.py  test_observability_telemetry_ingress.py  test_observability_tracing.py  test_org_routes.py  test_rule_candidates.py  test_safe_flow_return_to.py  test_skill_metrics.py  test_unit_conversion.py  test_wastage.py
tls/: wb_cert.cer
(+659 files in other folders)
