[project]
name = "workflow-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "authlib==1.2.1",
    "bcrypt>=5.0.0",
    "click==8.1.7",
    "cryptography>=41.0.0",
    "docker==6.1.3",
    "flask==2.3.3",
    "flask-limiter==3.5.0",
    "pandas>=2.0.0",
    "psycopg2-binary==2.9.7",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "requests==2.31.0",
    "sqlalchemy==2.0.19",
    "xero-python==4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

# System Dependencies (not managed by uv):
# - keepassxc: Required for local secrets management (includes keepassxc-cli)
#   Install: sudo apt install keepassxc (Ubuntu/WSL)
#           brew install keepassxc (macOS)
#   See README.md for installation instructions

[project.scripts]
workflow = "app.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = true

[tool.ruff]
# Set the maximum line length
line-length = 120

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "node_modules",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), and isort (I) rules by default
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Ignore line-too-long for now

[tool.ruff.lint.per-file-ignores]
# Allow longer lines in tests
"**/tests/**" = ["E501"]
"**/test_*.py" = ["E501"]
# Allow imports after sys.path manipulation (needed for app/app.py)
"app/app.py" = ["E402"]
"app/features/workflow_engine/backend/sales_execution_mapping.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
