[project]
name = "workflow-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt>=5.0.0",
    "click==8.3.3",
    "cryptography>=48.0.1",
    "docker==6.1.3",
    "flask==3.1.3",
    "flask-limiter==3.5.0",
    "flask-wtf==1.2.1",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-flask>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-sdk>=1.27",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.5,<3",
    "pyotp>=2.9.0",
    "pytest>=9.0.3",
    "structlog>=24.1",
    "qrcode[pil]>=7.4.2",
    "requests==2.33.0",
    "sqlalchemy>=2.0.43,<2.1",
    "xero-python==4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "factory-boy>=3.3.0",
    "pytest-playwright>=0.8.0",
]

# System Dependencies (not managed by uv):
# - keepassxc: Required for local secrets management (includes keepassxc-cli)
#   Install: sudo apt install keepassxc (Ubuntu/WSL)
#           brew install keepassxc (macOS)
#   See README.md for installation instructions

[project.scripts]
workflow = "app.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
# Markers are declared so an unknown one is an error, not a silent typo that makes a
# gate quietly stop applying. Owned by the suite-warden skill.
markers = [
    "live_server: drives a real dev server over HTTPS; auto-skipped by tests/conftest.py when none is listening",
    "quarantined: known-broken/flaky, excluded from default runs; every entry needs a row in .agents/test-quarantine.md",
    "e2e: drives a real browser against an app booted by tests/e2e/conftest.py; auto-skipped with a reason when chromium, the TLS cert, or the test DB is absent",
    "perf: performance-budget measurement (tests/e2e/test_perf_budgets.py); ceilings block, budgets warn — see .agents/perf/budgets.json and the perf-guardrails skill",
]
# Quarantined tests are opt-in: `-m quarantined` to run them, nothing by default.
addopts = "-m 'not quarantined'"

[tool.ruff]
# Set the maximum line length
line-length = 120

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "node_modules",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), and isort (I) rules by default
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Ignore line-too-long for now

[tool.ruff.lint.per-file-ignores]
# Allow longer lines in tests
"**/tests/**" = ["E501"]
"**/test_*.py" = ["E501"]
# Allow imports after sys.path manipulation (needed for app/app.py)
"app/app.py" = ["E402"]
"app/features/workflow_engine/backend/sales_execution_mapping.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
